specs/blueprints/errors/validation/missing_section.eno
# Querying an empty document for a required but missing section 

-- input

-- input

-- javascript
eno.parse(input).requiredSection('section');
-- javascript

-- php
Eno\Parser::parse($input)->requiredSection('section');
-- php

-- python
enolib.parse(input).required_section('section')
-- python

-- ruby
Eno.parse(input).required_section('section')
-- ruby

## ValidationError

-- text
The section 'section' is missing - in case it has been specified look for typos and also check for correct capitalization.
-- text

-- snippet
   Line | Content
 ?    1 | 
-- snippet

selection: [0,0] => [0,0]


# Querying a section for a required but missing section 

-- input
# section
-- input

-- javascript
eno.parse(input).section('section').requiredSection('section');
-- javascript

-- php
Eno\Parser::parse($input)->section('section')->requiredSection('section');
-- php

-- python
enolib.parse(input).section('section').required_section('section')
-- python

-- ruby
Eno.parse(input).section('section').required_section('section')
-- ruby

## ValidationError

-- text
The section 'section' is missing - in case it has been specified look for typos and also check for correct capitalization.
-- text

-- snippet
   Line | Content
 *    1 | # section
-- snippet

selection: [0,9] => [0,9]
